--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -21,7 +21,7 @@ body {
   font-size: 1rem;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica,
     Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
-    padding-bottom: var(--header-height);
+    padding-top: var(--header-height);
 }
 
 a {
